force-app/main/default/objects/PF_Config__mdt/PF_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for Prompt Factory pipeline behavior, including timeouts, thresholds, and feature flags.</description>
    <label>Prompt Factory Configuration</label>
    <pluralLabel>Prompt Factory Configurations</pluralLabel>
</CustomObject>