force-app/main/default/objects/PF_Config__mdt/fields/Log_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Log_Retention_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Number of days to retain pipeline run records before automatic cleanup. Default is 30 days.</description>
    <label>Log Retention (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>