force-app/main/default/objects/PF_Config__mdt/fields/Max_Retry_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Retry_Attempts__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum number of automatic retry attempts for failed AI API calls. Default is 3.</description>
    <label>Max Retry Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>