force-app/main/default/objects/PF_Config__mdt/fields/Quality_Pass_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Quality_Pass_Threshold__c</fullName>
    <defaultValue>7.0</defaultValue>
    <description>Minimum quality score (1-10) required for a prompt to pass validation. Default is 7.0.</description>
    <label>Quality Pass Threshold</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>