force-app/main/default/objects/PF_Config__mdt/fields/Stage_Timeout_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Stage_Timeout_Seconds__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Maximum execution time for AI API callouts in seconds. Default is 60 seconds.</description>
    <label>Stage Timeout (Seconds)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>